<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/smart_shop_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/widget_smart_shop_iv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/smart_shop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/widgets_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size_10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/stores_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/widget_stores_iv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_60dp"
                android:contentDescription="@string/favorite_stores"
                android:src="@drawable/stores" />

            <TextView
                android:id="@+id/widget_stores"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_30dp"
                android:text="@string/stores"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/shop_lists_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_20dp"
            android:layout_marginStart="@dimen/size_40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/widget_shop_lists_iv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_60dp"
                android:contentDescription="@string/shop_lists"
                android:src="@drawable/shop_lists" />

            <TextView
                android:id="@+id/widget_shop_lists"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_30dp"
                android:text="@string/shop_lists"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>