<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/size_20dp">

        <TableLayout
            android:id="@+id/my_contact_lists_tbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cell_border"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_40dp"
                    android:background="@drawable/cell_border_white_bg"
                    android:id="@+id/all_contacts_cb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/size_5dp"
                    android:paddingStart="@dimen/size_5dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:text="@string/contact_details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/size_10dp"
                    android:layout_height="@dimen/size_0dp" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/share_list_btn"
            android:layout_width="@dimen/size_130dp"
            android:layout_height="@dimen/size_30dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_10dp"
            android:background="@color/colorPrimary"
            android:text="@string/updating_sharing"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />

        <RelativeLayout
            android:id="@+id/loading_contacts_info_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/contacts_loading_pb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_100dp"
                android:tooltipText="@string/searching_contacts_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:text="@string/searching_contacts_message" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>